Conditionalize use of pthread_atfork.

* configure.ac: Add checking pthread_atfork.

* src/npth-sigev.c (npth_sigev_fini): Call pthread_atfork only when
it's available.

--

GnuPG-bug-id: 1576